--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <div class="about_title">
                 ABOUT
             </div>
+            <div class="about_line"></div>
             <div class="about_content">
                 Born and raised in Columbus, OH. As in my last name, I am a lover of the ocean. When I heard that coding was the architecture of the computer,<br>
             having had experience in residential remodeling, I decided to investigate it by diving headfirst into the WCCI bootcamp. <br>
