completed rough draft for experience section. need to complete fluff for it

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <script src="https://kit.fontawesome.com/8e63348ab0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -42,116 +42,23 @@
             </div>
             <div class="about_line"></div>
             <div class="about_content">
-                Born and raised in Columbus, OH. As in my last name, I am a lover of the ocean. When I heard that coding was the architecture of the computer,<br>
-            having had experience in residential remodeling, I decided to investigate it by diving headfirst into the WCCI bootcamp. <br>
+                Born and raised in Columbus, OH. As in my last name, I am a lover of the ocean. When I heard that coding was the architecture of the computer,
+            having had experience in residential remodeling, I decided to investigate it by diving headfirst into the WCCI bootcamp.
             Hobbies: Woodworking and Horticulture.
             </div>
         </section>
         <section id="experience">
-            EXPERIENCE
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-
+            <div class="experience_title">
+                EXPERIENCE
+            </div>
+            <div class="experience_line"></div>
+            <div class="experience_content">
+                <i id="javascript" class="fab fa-js"></i>
+                <i id="html" class="fab fa-html5"></i>
+                <i id="css" class="fab fa-css3-alt"></i>
+                <i id="vue" class="fab fa-vuejs"></i>
+            </div>
+            
         </section>
         <section id="projects">
             PROJECTS
