experience icon fluff complete

--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
             </div>
             <div class="about_line"></div>
             <div class="about_content">
-                Born and raised in Columbus, OH. As in my last name, I am a lover of the ocean. When I heard that coding was the architecture of the computer,
-            having had experience in residential remodeling, I decided to investigate it by diving headfirst into the WCCI bootcamp.
-            Hobbies: Woodworking and Horticulture.
+                Born and raised in Columbus, OH. As in my last name, I am a lover of the ocean. When I heard that coding
+                was the architecture of the computer,
+                having had experience in residential remodeling, I decided to investigate it by diving headfirst into
+                the WCCI bootcamp.
+                Hobbies: Woodworking and Horticulture.
             </div>
         </section>
         <section id="experience">
@@ -53,12 +55,16 @@
             </div>
             <div class="experience_line"></div>
             <div class="experience_content">
-                <i id="javascript" class="fab fa-js"></i>
-                <i id="html" class="fab fa-html5"></i>
-                <i id="css" class="fab fa-css3-alt"></i>
-                <i id="vue" class="fab fa-vuejs"></i>
+                <div class="experience_content_top">
+                    <i id="javascript" class="fab fa-js"></i>
+                    <i id="html" class="fab fa-html5"></i>
+                </div>
+                <div class="experience_content_bottom">
+                    <i id="css" class="fab fa-css3-alt"></i>
+                    <i id="vue" class="fab fa-vuejs"></i>
+                </div>
             </div>
-            
+
         </section>
         <section id="projects">
             PROJECTS
