added second project

--- a/index.html
+++ b/index.html
@@ -67,137 +67,14 @@
 
         </section>
         <section id="projects">
-            PROJECTS
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt molestias numquam quod necessitatibus
-            asperiores nesciunt aspernatur, culpa enim facere dolorum repellat molestiae ipsum recusandae veritatis
-            assumenda dicta perspiciatis! Quaerat, tempore.
-
+            <div class="pojects_title">
+                PROJECTS
+            </div>
+            <div class="projects_line"></div>
+            <div class="projects_content">
+                <a class= "cookie" href="https://clicking-calamity-bwaterman8.hostman.site/"><img src="./images/Screenshot (2).png" alt="" height="200px" width="300px"></a>
+                <a class= "cookie" href="https://punching-bag.hostman.site/"><img src="./images/Screenshot (7).png" alt="" height="200px" width="300px"></a>
+            </div>
         </section>
     </div>
 </body>
